--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    font-family: 'AllRoundGothic' 'Segoe UI', sans-serif !important;
+    font-family: 'AllRoundGothic' !important;
     background: #f1dff8;
     overflow-x: hidden;
 }
